crates/runtime/tests/models/snapshots/integration_models__models__search__with_cache_bypass_post_cache_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": 0.6104,
      "dataset": "spice.public.cached_search_bypass",
      "matches": {
        "cp_description": [
          "Programmes receive just likely, key homes. Relevant"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 11
      }
    },
    {
      "_score": 0.5983,
      "dataset": "spice.public.cached_search_bypass",
      "matches": {
        "cp_description": [
          "Heavily direct problems try eventually on a nurses. Courses may make "
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 8
      }
    }
  ]
}
