crates/runtime/tests/models/snapshots/integration_models__models__search__with_cache_bypass_pre_cache_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.61",
      "dataset": "spice.public.cached_search_bypass",
      "matches": {
        "cp_description": [
          "Programmes receive just likely, key homes. Relevant,"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 11
      }
    },
    {
      "_score": "0.59",
      "dataset": "spice.public.cached_search_bypass",
      "matches": {
        "cp_description": [
          "Heavily direct problems try eventually on a nurses. Courses may make a"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 8
      }
    }
  ]
}
