crates/runtime/tests/models/snapshots/integration_models__models__search__with_cache_post_cache_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "In general basic characters welcome. Clearly lively friends con"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 1
      },
      "_score": 0.9400963357009336
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Close customers might struggle away different mem"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 15
      },
      "_score": 0.9398291716774164
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Earlier different differences get just to a methods; masses inclu"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 3
      },
      "_score": 0.9375262525348972
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Years must understand. Well fat thousands take. Good police "
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 7
      },
      "_score": 0.9273301161037488
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Human, successive tears highlight also as radical prod"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 10
      },
      "_score": 0.9159284526262208
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Even democratic stairs would know happy investigations. Hist"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 2
      },
      "_score": 0.9117962035409471
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Practical schools might put twice interested, strong organizations. Regulatory"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 17
      },
      "_score": 0.9109729176536489
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Heavily direct problems try eventually on a nurses. Courses may make "
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 8
      },
      "_score": 0.909036715319305
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Good questions borrow only base children. Remarkably present "
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 19
      },
      "_score": 0.907636856948916
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Necessary, major terms give still now joint thoughts. Only considerable wome"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 14
      },
      "_score": 0.9068648214701052
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Absolute, early papers spare. Independent services need. About extreme women "
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 18
      },
      "_score": 0.8959976326549786
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Programmes receive just likely, key homes. Relevant"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 11
      },
      "_score": 0.8958621526213884
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Respects might appear early, long metres. Cases would understan"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 13
      },
      "_score": 0.8957666947546759
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Times could not address disabled indians. Effectively public ports "
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 12
      },
      "_score": 0.8879877705913609
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Members comfort major horses. All good vehicles must perform ago wrong new conditions. P"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 20
      },
      "_score": 0.8784471135747325
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Narrowly great dogs carry only by the events. Successful, able legs would no"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 5
      },
      "_score": 0.8733924987803368
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "So appropriate hopes cannot constitute with a shapes. Investors know therefo"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 9
      },
      "_score": 0.8611566533290982
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Social pictures welcome almost british teams. Awful preparations leave g"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 16
      },
      "_score": 0.8453847500877436
    },
    {
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Legislative origins precede bold stations. Tiny sports should resume all pupils. Forces launch t"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 6
      },
      "_score": 0.8262181184660475
    }
  ]
}
