crates/runtime/tests/models/snapshots/integration_models__models__search__with_cache_pre_cache_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.94",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "In general basic characters welcome. Clearly lively friends conv"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 1
      }
    },
    {
      "_score": "0.93",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Close customers might struggle away different memb"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 15
      }
    },
    {
      "_score": "0.93",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Earlier different differences get just to a methods; masses includ"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 3
      }
    },
    {
      "_score": "0.92",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Years must understand. Well fat thousands take. Good police l"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 7
      }
    },
    {
      "_score": "0.91",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Human, successive tears highlight also as radical produ"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 10
      }
    },
    {
      "_score": "0.91",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Even democratic stairs would know happy investigations. Histo"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 2
      }
    },
    {
      "_score": "0.91",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Practical schools might put twice interested, strong organizations. Regulatory,"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 17
      }
    },
    {
      "_score": "0.90",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Heavily direct problems try eventually on a nurses. Courses may make a"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 8
      }
    },
    {
      "_score": "0.90",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Good questions borrow only base children. Remarkably present e"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 19
      }
    },
    {
      "_score": "0.90",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Necessary, major terms give still now joint thoughts. Only considerable women"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 14
      }
    },
    {
      "_score": "0.89",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Absolute, early papers spare. Independent services need. About extreme women u"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 18
      }
    },
    {
      "_score": "0.89",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Programmes receive just likely, key homes. Relevant,"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 11
      }
    },
    {
      "_score": "0.89",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Respects might appear early, long metres. Cases would understand"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 13
      }
    },
    {
      "_score": "0.88",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Times could not address disabled indians. Effectively public ports c"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 12
      }
    },
    {
      "_score": "0.87",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Members comfort major horses. All good vehicles must perform ago wrong new conditions. Pl"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 20
      }
    },
    {
      "_score": "0.87",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Narrowly great dogs carry only by the events. Successful, able legs would not"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 5
      }
    },
    {
      "_score": "0.86",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "So appropriate hopes cannot constitute with a shapes. Investors know therefor"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 9
      }
    },
    {
      "_score": "0.84",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Social pictures welcome almost british teams. Awful preparations leave ga"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 16
      }
    },
    {
      "_score": "0.82",
      "dataset": "spice.public.cached_search",
      "matches": {
        "cp_description": [
          "Legislative origins precede bold stations. Tiny sports should resume all pupils. Forces launch to"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 6
      }
    }
  ]
}
