crates/runtime/tests/models/snapshots/integration_models__models__search__with_where_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "qs",
      "matches": {
        "answer": [
          "Choices create costs and benefits."
        ]
      },
      "primary_key": {
        "id": 863
      },
      "_score": "0.93"
    },
    {
      "dataset": "qs",
      "matches": {
        "answer": [
          "\\(\\boxed{2a + 4b}\\)"
        ]
      },
      "primary_key": {
        "id": 1316
      },
      "_score": "0.91"
    },
    {
      "dataset": "qs",
      "matches": {
        "answer": [
          "\\(\\boxed{x = A + E}\\)"
        ]
      },
      "primary_key": {
        "id": 590
      },
      "_score": "0.91"
    },
    {
      "dataset": "qs",
      "matches": {
        "answer": [
          "<refined solution>  \n\n*(Repeated for each question-answer pair above.)"
        ]
      },
      "primary_key": {
        "id": 6
      },
      "_score": "0.90"
    }
  ]
}
